# rag-doctor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  OLLAMA.md  PUBLISH.md  README.md  fix-ci-lint.patch  mac_setup.sh  pyproject.toml  rag-doctor.yaml  ruff.toml  run_tests.py  setup.sh  test_with_ollama.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  rag-quality.yml
docs/: 01-developer-guide.docx  02-technical-build.docx  03-problem-solution.docx  api-reference.md  architecture.md  ci-cd.md  cli.md  configuration.md  connectors.md  embeddings.md  index.md  publishing.md  quickstart.md  root-causes.md  tools-reference.md  user-guide.md
examples/: batch_diagnose.py  batch_example.jsonl  ci_quality_gate.py  custom_connector.py  debug_from_logs.py  ollama_quickstart.py  quickstart.py
rag_doctor/: __init__.py  cli.py  config.py  doctor.py  embeddings.py  models.py  report.py  vector_store.py
rag_doctor/connectors/: __init__.py  base.py  mock.py  model_selector.py  ollama_connector.py
rag_doctor/tools/: __init__.py  _embed_utils.py  base.py  chunk_analyzer.py  chunk_optimizer.py  hallucination_tracer.py  position_tester.py  query_rewriter.py  retrieval_auditor.py
samples/: 01_basic_diagnosis.py  02_from_logs.py  03_batch_ci_gate.py  04_custom_connector.py  05_all_root_causes.py  06_json_report.py  README.md
scripts/: publish_pypi.sh  push_github.sh  test_local_mac.sh
tests/: fixtures.py  golden_set.jsonl  test_connectors.py  test_doctor.py  test_end_to_end.py  test_tools.py
