[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-doctor"
version = "1.0.0"
description = "Agentic RAG pipeline failure diagnosis — no database, no LLM API, no cloud"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["rag", "llm", "evaluation", "diagnosis", "retrieval", "hallucination", "ai-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Semantic embeddings (recommended)
embeddings = [
    "sentence-transformers>=2.2.0",
]
# Full installation with all integrations
full = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0",
    "anthropic>=0.25",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "chromadb>=0.5",
    "tiktoken>=0.7",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/rag-doctor"
Documentation = "https://github.com/YOUR_USERNAME/rag-doctor/tree/main/docs"
Repository = "https://github.com/YOUR_USERNAME/rag-doctor"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/rag-doctor/issues"
Changelog = "https://github.com/YOUR_USERNAME/rag-doctor/blob/main/CHANGELOG.md"

[project.scripts]
rag-doctor = "rag_doctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rag_doctor"]

[tool.hatch.build.targets.sdist]
include = [
    "rag_doctor/",
    "tests/",
    "samples/",
    "docs/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    "run_tests.py",
    "rag-doctor.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["rag_doctor"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["rag_doctor"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
